syntax = "proto3";

package event_indexer;

service EventIndexer {
  rpc PersistEvents (PersistEventsRequest) returns (PersistEventsReply) {}
}

message PersistEventsRequest {
  string stream_name = 1;
  repeated Event events = 2;
  optional uint64 expected_sequence = 3;
}

message PersistEventsReply {
  optional uint64 global_sequence = 1;
}

message Event {
  string id = 1;
  string event_type = 2;
  bytes data = 3;
  sint64 timestamp = 4;
}
